--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+dj-database-url==2.0.0
+django-ses==3.5.0
+django-storages==1.14.2
+django-templated-mail==1.1.1
+gunicorn==21.2.0
 Django==4.2.7
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 python-dotenv==1.0.0
-dj-rest-auth==5.0.2
 djangorestframework-simplejwt==5.3.0
-django-allauth==0.57.0
+djoser==2.2.2
+social-auth-app-django==5.4.0
+rest_framework_simplejwt==0.0.2
