--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DJANGO_SECRET_KEY="django-insecure-h-h)+f-+c73nyd+6a29angqzlcznhe@i32hn(tcq88h57
 DJANGO_CORS_ALLOWED_ORIGINS="http://localhost:4200 http://127.0.0.1:4200"
 DJANGO_CORS_ALLOW_CREDENTIALS=True
 AUTH_COOKIE_SECURE=False
-DJANGO_ALLOWED_HOSTS="127.0.0.1 localhost d54c-182-182-217-127.ngrok-free.app"
+DJANGO_ALLOWED_HOSTS="127.0.0.1 localhost"
