--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ DJANGO_AUTH_COOKIES_SAME_SITE="None"
 DJANGO_AUTH_COOKIE_ACCESS_MAX_AGE=3600
 DJANGO_AUTH_COOKIE_REFRESH_MAX_AGE=86400
 DJANGO_ALLOWED_HOSTS="*"
-DJANGO_CORS_ALLOWED_ORIGINS="*"
+DJANGO_CORS_ALLOWED_ORIGINS="http://localhost:3000 https://127.0.0.1:3000"
 DJANGO_CORS_ALLOW_CREDENTIALS=True
 DJANGO_SECRET_KEY="django-insecure-h-h)+f-+c73nyd+6a29angqzlcznhe@i32hn(tcq88h57a0die"
