--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+DJANGO_DATABASE_NAME="postgres"
+DJANGO_DATABASE_USER="postgres"
+DJANGO_DATABASE_PASSWORD="YMev8JDtlZsRersl"
+DJANGO_DATABASE_HOST="db.rladvpxlxmezzuisnraq.supabase.co"
+DJANGO_DATABASE_PORT="5432"
 DJANGO_DEBUG=True
 DJANGO_STATIC_URL="/static/"
 AUTH_COOKIE_SECURE=False
