--- a/.env
+++ b/.env
@@ -1,18 +1,7 @@
-DJANGO_DATABASE_NAME="postgres"
-DJANGO_DATABASE_USER="postgres"
-DJANGO_DATABASE_PASSWORD="YMev8JDtlZsRersl"
-DJANGO_DATABASE_HOST="db.rladvpxlxmezzuisnraq.supabase.co"
-DJANGO_DATABASE_PORT="5432"
-DJANGO_DEBUG=False
-AUTH_COOKIE_SECURE=False
-DJANGO_AUTH_COOKIES_PATH="/"
-DJANGO_AUTH_COOKIE="access"
-DJANGO_AUTH_COOKIES_SECURE=True
-DJANGO_AUTH_COOKIES_HTTP_ONLY=True
-DJANGO_AUTH_COOKIES_SAME_SITE="None"
-DJANGO_AUTH_COOKIE_ACCESS_MAX_AGE=3600
-DJANGO_AUTH_COOKIE_REFRESH_MAX_AGE=86400
-DJANGO_ALLOWED_HOSTS="*"
-DJANGO_CORS_ALLOWED_ORIGINS="http://localhost:4200 http://127.0.0.1:4200"
-DJANGO_CORS_ALLOW_CREDENTIALS=True
-DJANGO_SECRET_KEY="django-insecure-h-h)+f-+c73nyd+6a29angqzlcznhe@i32hn(tcq88h57a0die"
+DEBUG=False
+DATABASE_NAME="postgres"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="YMev8JDtlZsRersl"
+DATABASE_HOST="db.rladvpxlxmezzuisnraq.supabase.co"
+DATABASE_PORT="5432"
+SECRET_KEY="django-insecure-h-h)+f-+c73nyd+6a29angqzlcznhe@i32hn(tcq88h57a0die"
